overflow erroe resolved

--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -16,3 +16,16 @@
 .card-container:hover {
   transform: scale(1.05);
 }
+
+h1{
+  
+  word-break: break-word;
+  white-space: pre-wrap;
+
+}
+p{
+  
+  word-break: break-all;
+  white-space: pre-wrap;
+
+}
